--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>SV CONSTRUCCIONES</title>
+    <title>SV GROUP</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
                     <!-- ***** Search End ***** -->
                     <div class="search-input">
                       <form id="search" action="#">
-                        <input type="text" placeholder="Ingresa tu busqueda" id='searchText' name="searchKeyword" onkeypress="handle" />
+                        <input type="text" placeholder="Ingresa tu búsqueda" id='searchText' name="searchKeyword" onkeypress="handle" />
                         <i class="fa fa-search"></i>
                       </form>
                     </div>
@@ -89,7 +89,7 @@
               <div class="col-lg-7">
                 <div class="header-text">
                   <h6>Bienvenidos a:</h6>
-                  <h4><em>SELVA VIVA</em> CONSTRUCCIONES</h4>
+                  <h4><em>SELVA VIVA</em> GROUP</h4>
                   <div class="main-button">
                     <a   href="browse.html">NUESTROS PROYECTOS</a>
                   </div>
@@ -104,13 +104,13 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Lo Más </em> Reciente</h4>
+                  <h4><em>Nuestras </em> Empresas</h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-01.jpg" alt="">
-                      <h4>Fortnite<br><span>Sandbox</span></h4>
+                      <h4>SV Inmobiliaria<br><span>Vivienda</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -120,7 +120,7 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-02.jpg" alt="">
-                      <h4>PubG<br><span>Battle S</span></h4>
+                      <h4>SV Lab<br><span>Desarrollo de software</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -130,7 +130,8 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-03.jpg" alt="">
-                      <h4>Dota2<br><span>Steam-X</span></h4>
+                      <h4>SV Construcciones<br>
+                      <span>Obras Civiles</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -140,7 +141,7 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-04.jpg" alt="">
-                      <h4>CS-GO<br><span>Legendary</span></h4>
+                      <h4>SV media<br><span>CComunicación</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -153,7 +154,7 @@
                         <div class="col-lg-6 col-sm-6">
                           <div class="item inner-item">
                             <img src="assets/images/popular-05.jpg" alt="">
-                            <h4>Mini Craft<br><span>Legendary</span></h4>
+                            <h4>SV Student<br><span>Educación</span></h4>
                             <ul>
                               <li><i class="fa fa-star"></i> 4.8</li>
                               <li><i class="fa fa-download"></i> 2.3M</li>
@@ -163,7 +164,7 @@
                         <div class="col-lg-6 col-sm-6">
                           <div class="item">
                             <img src="assets/images/popular-06.jpg" alt="">
-                            <h4>Eagles Fly<br><span>Matrix Games</span></h4>
+                            <h4>SV Industries<br><span>Industria Mecánica</span></h4>
                             <ul>
                               <li><i class="fa fa-star"></i> 4.8</li>
                               <li><i class="fa fa-download"></i> 2.3M</li>
@@ -176,7 +177,7 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-07.jpg" alt="">
-                      <h4>Warface<br><span>Max 3D</span></h4>
+                      <h4>SV Services<br><span>Transporte y logistica</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -186,7 +187,37 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/popular-08.jpg" alt="">
-                      <h4>Warcraft<br><span>Legend</span></h4>
+                      <h4>SV Agro<br><span>Agricultura</span></h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 2.3M</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/popular-08.jpg" alt="">
+                      <h4>SV Eat´s<br><span>Gastronomia</span></h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 2.3M</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/popular-08.jpg" alt="">
+                      <h4>SV Health<br><span>Salud</span></h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 2.3M</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/popular-08.jpg" alt="">
+                      <h4>SV Travel<br><span>Turismo</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -202,9 +233,6 @@
               </div>
             </div>
           </div>
-          <!-- ***** Most Popular End ***** -->
-
-          <!-- ***** Gaming Library Start ***** -->
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
@@ -213,27 +241,27 @@
               <div class="item">
                 <ul>
                   <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Dota 2</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>24/08/2036</span></li>
-                  <li><h4>Hours Played</h4><span>634 H 22 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><h4>G-Costos</h4><span>Presupuesto</span></li>
+                  <li><h4>Versión</h4><span>V-1</span></li>
+                  <li><h4>Tipo</h4><span>Gestión de proyectos </span></li>
+                  <li><h4>Desponible</h4><span>Web/app</span></li>
+                  <li><div class="main-border-button border-no-active"><a href="#">Explorar</a></div></li>
                 </ul>
               </div>
               <div class="item">
                 <ul>
                   <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>Fortnite</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>22/06/2036</span></li>
-                  <li><h4>Hours Played</h4><span>740 H 52 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button"><a href="#">Donwload</a></div></li>
+                  <li><h4>G-IA</h4><span>Sandbox</span></li>
+                  <li><h4>Version</h4><span>22/06/2036</span></li>
+                  <li><h4>Tipo</h4><span>Gestión de proyectos</span></li>
+                  <li><h4>Disponible</h4><span>Web-DEMO</span></li>
+                  <li><div class="main-border-button"><a href="#">Explorar</a></div></li>
                 </ul>
               </div>
               <div class="item last-item">
                 <ul>
                   <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>CS-GO</h4><span>Sandbox</span></li>
+                  <li><h4>G-Estructure</h4><span>Sandbox</span></li>
                   <li><h4>Date Added</h4><span>21/04/2036</span></li>
                   <li><h4>Hours Played</h4><span>892 H 14 Mins</span></li>
                   <li><h4>Currently</h4><span>Downloaded</span></li>
@@ -243,7 +271,7 @@
             </div>
             <div class="col-lg-12">
               <div class="main-button">
-                <a href="profile.html">View Your Library</a>
+                <a href="profile.html">Ver más Aplicaciones</a>
               </div>
             </div>
           </div>
@@ -257,7 +285,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2024 <a href="#">SV CONSTRUCCIONES</a>Todos los derechos reservados. 
+          <p>Copyright © 2024 <a href="#">SV CONSTRUCCIONES</a> Todos los derechos reservados. 
           
           <br>Design: <a href="https://www.facebook.com/ginohperales/" target="_blank" title="">GP</a></p>
         </div>
