2 avance de codigo

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Discover Popular</a>
+                      <a href="browse.html">Marcas Dependientes</a>
                     </div>
                   </div>
                 </div>
@@ -251,8 +251,8 @@
               <div class="item">
                 <ul>
                   <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>G-IA</h4><span>Sandbox</span></li>
-                  <li><h4>Version</h4><span>22/06/2036</span></li>
+                  <li><h4>G-IA</h4><span>Estructura</span></li>
+                  <li><h4>Versión</h4><span>Beta</span></li>
                   <li><h4>Tipo</h4><span>Gestión de proyectos</span></li>
                   <li><h4>Disponible</h4><span>Web-DEMO</span></li>
                   <li><div class="main-border-button"><a href="#">Explorar</a></div></li>
@@ -261,11 +261,11 @@
               <div class="item last-item">
                 <ul>
                   <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li><h4>G-Estructure</h4><span>Sandbox</span></li>
-                  <li><h4>Date Added</h4><span>21/04/2036</span></li>
-                  <li><h4>Hours Played</h4><span>892 H 14 Mins</span></li>
-                  <li><h4>Currently</h4><span>Downloaded</span></li>
-                  <li><div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div></li>
+                  <li><h4>G-Estructure</h4><span>Análisis</span></li>
+                  <li><h4>Versión</h4><span>V-2.1.2</span></li>
+                  <li><h4>Tipo</h4><span>Concreto Armado</span></li>
+                  <li><h4>Disponible</h4><span>Web/App</span></li>
+                  <li><div class="main-border-button border-no-active"><a href="#">Explorar</a></div></li>
                 </ul>
               </div>
             </div>
