--- a/browse.html
+++ b/browse.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Terreno Agricola<br><span>SV Inmobiliaria</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -116,7 +116,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>Vivienda Familiar<br><span>SV Construcciones</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -129,7 +129,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>Almacenes Shimba<br><span>SV Construcciones</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -142,7 +142,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>CS-GO<br><span>249K Downloads</span></h4>
+                    <h4>Vivienda Multifamiliar<br><span>SV Construcciones</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -155,7 +155,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Gamezer<br><span>249K Downloads</span></h4>
+                    <h4>APP CONEIC<br><span>SV Lab</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -168,7 +168,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <h6>2.4K Streaming</h6>
                       </div>
                     </div>
-                    <h4>Island Rusty<br><span>249K Downloads</span></h4>
+                    <h4>Remodelación CC<br><span>SV Construcciones</span></h4>
                     <ul>
                       <li><i class="fa fa-star"></i> 4.8</li>
                       <li><i class="fa fa-download"></i> 2.3M</li>
@@ -185,8 +185,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <ul>
                   <li>
                     <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
-                    <h4>Fortnite</h4>
-                    <h6>Sandbox</h6>
+                    <h4>Vivienda Familiar</h4>
+                    <h6>SV Construcciones</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
                     <span><i class="fa fa-download" style="color: #ec6090;"></i> 2.2M</span>
                     <div class="download">
@@ -226,7 +226,7 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="start-stream">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>How To Start Your</em> Live Stream</h4>
+                <h4><em>FOX</em> ACADEMY</h4>
               </div>
               <div class="row">
                 <div class="col-lg-4">
@@ -234,8 +234,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <div class="icon">
                       <img src="assets/images/service-01.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
-                    <h4>Go To Your Profile</h4>
-                    <p>Cyborg Gaming is free HTML CSS website template provided by TemplateMo. This is Bootstrap v5.2.0 layout.</p>
+                    <h4>Mejor Educación</h4>
+                    <p>En Fox Academy nos enfocamos en brindar una educación de excelencia, especializada en ciencias e ingeniería</p>
                   </div>
                 </div>
                 <div class="col-lg-4">
@@ -243,8 +243,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <div class="icon">
                       <img src="assets/images/service-02.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
-                    <h4>Live Stream Button</h4>
-                    <p>If you wish to support us, you can make a <a href="https://paypal.me/templatemo" target="_blank">small contribution via PayPal</a> to info [at] templatemo.com</p>
+                    <h4>Buena Dirección</h4>
+                    <p>En Fox Academy te guiamos hacia el éxito con una educación orientada y bien dirigida</p>
                   </div>
                 </div>
                 <div class="col-lg-4">
@@ -252,13 +252,13 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <div class="icon">
                       <img src="assets/images/service-03.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
-                    <h4>You Are Live</h4>
-                    <p>You are not allowed to redistribute this template's downloadable ZIP file on any other template collection website.</p>
+                    <h4>Clases de Calidad</h4>
+                    <p>En Fox Academy ofrecemos clases de calidad, diseñadas para brindar una formación sólida en ciencias e ingeniería</p>
                   </div>
                 </div>
                 <div class="col-lg-12">
                   <div class="main-button">
-                    <a href="profile.html">Go To Profile</a>
+                    <a href="profile.html">Ir a FOX ACADEMY</a>
                   </div>
                 </div>
               </div>
@@ -270,7 +270,7 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="live-stream">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Most Popular</em> Live Stream</h4>
+                <h4><em>Nuestros</em> Videos</h4>
               </div>
             </div>
             <div class="row">
@@ -376,7 +376,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="streams.html">Discover All Streams</a>
+                  <a href="streams.html">Ir a nuestro Canal</a>
                 </div>
               </div>
             </div>
