--- a/browse.html
+++ b/browse.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -111,7 +111,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -124,7 +124,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -137,7 +137,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -150,7 +150,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -163,7 +163,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -184,7 +184,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 </div>
                 <ul>
                   <li>
-                    <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                     <h4>Vivienda Familiar</h4>
                     <h6>SV Construcciones</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -194,7 +194,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                   </li>
                   <li>
-                    <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                     <h4>CS-GO</h4>
                     <h6>Legendary</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -204,7 +204,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                     </div>
                   </li>
                   <li>
-                    <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                     <h4>PugG</h4>
                     <h6>Battle Royale</h6>
                     <span><i class="fa fa-star" style="color: yellow;"></i> 4.9</span>
@@ -232,7 +232,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="assets/images/service-01.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
                     <h4>Mejor Educación</h4>
                     <p>En Fox Academy nos enfocamos en brindar una educación de excelencia, especializada en ciencias e ingeniería</p>
@@ -241,7 +241,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="assets/images/service-02.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
                     <h4>Buena Dirección</h4>
                     <p>En Fox Academy te guiamos hacia el éxito con una educación orientada y bien dirigida</p>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-4">
                   <div class="item">
                     <div class="icon">
-                      <img src="assets/images/service-03.jpg" alt="" style="max-width: 60px; border-radius: 50%;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 60px; border-radius: 50%;">
                     </div>
                     <h4>Clases de Calidad</h4>
                     <p>En Fox Academy ofrecemos clases de calidad, diseñadas para brindar una formación sólida en ciencias e ingeniería</p>
@@ -277,7 +277,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-01.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -292,7 +292,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> KenganC</span>
                     <h4>Just Talking With Fans</h4>
@@ -302,7 +302,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-02.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -317,7 +317,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> LunaMa</span>
                     <h4>CS-GO 36 Hours Live Stream</h4>
@@ -327,7 +327,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-03.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -342,7 +342,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Areluwa</span>
                     <h4>Maybe Nathej Allnight Chillin'</h4>
@@ -352,7 +352,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-04.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -367,7 +367,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> GangTm</span>
                     <h4>Live Streaming Till Morning</h4>
