--- a/details.html
+++ b/details.html
@@ -87,11 +87,11 @@
               <div class="feature-banner header-text">
                 <div class="row">
                   <div class="col-lg-4">
-                    <img src="assets/images/feature-left.jpg" alt="" style="border-radius: 23px;">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" style="border-radius: 23px;">
                   </div>
                   <div class="col-lg-8">
                     <div class="thumb">
-                      <img src="assets/images/feature-right.jpg" alt="" style="border-radius: 23px;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="border-radius: 23px;">
                       <a href="https://www.youtube.com/watch?v=r1b03uKWk_M" target="_blank"><i class="fa fa-play"></i></a>
                     </div>
                   </div>
@@ -133,13 +133,13 @@
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/details-01.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/details-02.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-4">
-                      <img src="assets/images/details-03.jpg" alt="" style="border-radius: 23px; margin-bottom: 30px;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="border-radius: 23px; margin-bottom: 30px;">
                     </div>
                     <div class="col-lg-12">
                       <p>Cyborg Gaming is free HTML CSS website template provided by TemplateMo. This is Bootstrap v5.2.0 layout. You can make a <a href="https://paypal.me/templatemo" target="_blank">small contribution via PayPal</a> to info [at] templatemo.com and thank you for supporting. If you want to get the PSD source files, please contact us. Lorem ipsum dolor sit consectetur es dispic dipiscingei elit, sed doers eiusmod lisum hored tempor.</p>
@@ -166,7 +166,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
+                  <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                   <h4>Dota 2</h4><span>Sandbox</span>
                   <ul>
                     <li><i class="fa fa-star"></i> 4.8</li>
@@ -176,7 +176,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
+                  <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                   <h4>Dota 2</h4><span>Sandbox</span>
                   <ul>
                     <li><i class="fa fa-star"></i> 4.8</li>
@@ -186,7 +186,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
+                  <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                   <h4>Dota 2</h4><span>Sandbox</span>
                   <ul>
                     <li><i class="fa fa-star"></i> 4.8</li>
@@ -196,7 +196,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="assets/images/game-02.jpg" alt="" class="templatemo-item">
+                  <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                   <h4>Dota 2</h4><span>Sandbox</span>
                   <ul>
                     <li><i class="fa fa-star"></i> 4.8</li>
@@ -206,7 +206,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="assets/images/game-03.jpg" alt="" class="templatemo-item">
+                  <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                   <h4>Dota 2</h4><span>Sandbox</span>
                   <ul>
                     <li><i class="fa fa-star"></i> 4.8</li>
@@ -216,7 +216,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="item">
-                  <img src="assets/images/game-01.jpg" alt="" class="templatemo-item">
+                  <img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item">
                   <h4>Dota 2</h4><span>Sandbox</span>
                   <ul>
                     <li><i class="fa fa-star"></i> 4.8</li>
