--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-01.jpg" alt="">
+                      <img src="assets/images/LOGO_inm.png" alt="">
                       <h4>SV Inmobiliaria<br><span>Vivienda</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -119,7 +119,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-02.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab_v.png" alt="">
                       <h4>SV Lab<br><span>Desarrollo de software</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -129,7 +129,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-03.jpg" alt="">
+                      <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Construcciones<br>
                       <span>Obras Civiles</span></h4>
                       <ul>
@@ -140,8 +140,8 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-04.jpg" alt="">
-                      <h4>SV media<br><span>CComunicación</span></h4>
+                      <img src="assets/images/LOGO_cons.png" alt="">
+                      <h4>SV media<br><span>Comunicación</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
@@ -153,7 +153,7 @@
                       <div class="row">
                         <div class="col-lg-6 col-sm-6">
                           <div class="item inner-item">
-                            <img src="assets/images/popular-05.jpg" alt="">
+                            <img src="assets/images/LOGO_cons.png" alt="">
                             <h4>SV Student<br><span>Educación</span></h4>
                             <ul>
                               <li><i class="fa fa-star"></i> 4.8</li>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="col-lg-6 col-sm-6">
                           <div class="item">
-                            <img src="assets/images/popular-06.jpg" alt="">
+                            <img src="assets/images/LOGO_cons.png" alt="">
                             <h4>SV Industries<br><span>Industria Mecánica</span></h4>
                             <ul>
                               <li><i class="fa fa-star"></i> 4.8</li>
@@ -176,7 +176,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-07.jpg" alt="">
+                      <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Services<br><span>Transporte y logistica</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -186,7 +186,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-08.jpg" alt="">
+                      <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Agro<br><span>Agricultura</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -196,7 +196,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-08.jpg" alt="">
+                      <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Eat´s<br><span>Gastronomia</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -206,7 +206,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-08.jpg" alt="">
+                      <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Health<br><span>Salud</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -216,7 +216,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-08.jpg" alt="">
+                      <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Travel<br><span>Turismo</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -240,7 +240,7 @@
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item"></li>
                   <li><h4>G-Costos</h4><span>Presupuesto</span></li>
                   <li><h4>Versión</h4><span>V-1</span></li>
                   <li><h4>Tipo</h4><span>Gestión de proyectos </span></li>
@@ -250,7 +250,7 @@
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item"></li>
                   <li><h4>G-IA</h4><span>Estructura</span></li>
                   <li><h4>Versión</h4><span>Beta</span></li>
                   <li><h4>Tipo</h4><span>Gestión de proyectos</span></li>
@@ -260,7 +260,7 @@
               </div>
               <div class="item last-item">
                 <ul>
-                  <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/LOGO SV Lab.png" alt="" class="templatemo-item"></li>
                   <li><h4>G-Estructure</h4><span>Análisis</span></li>
                   <li><h4>Versión</h4><span>V-2.1.2</span></li>
                   <li><h4>Tipo</h4><span>Concreto Armado</span></li>
@@ -275,7 +275,7 @@
               </div>
             </div>
           </div>
-          <!-- ***** Gaming Library End ***** -->
+          <!-- ***** lIBRERIA FIN ***** -->
         </div>
       </div>
     </div>
