--- a/streams.html
+++ b/streams.html
@@ -63,7 +63,7 @@
                         <li><a href="browse.html">Proyectos</a></li>
                         <li><a href="details.html">Productos</a></li>
                         <li><a href="streams.html" class="active">Servicios</a></li>
-                        <li><a href="profile.html">Perfil <img src="assets/images/profile-header.jpg" alt=""></a></li>
+                        <li><a href="profile.html">Perfil <img src="assets/images/LOGO SV Lab.png" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -91,7 +91,7 @@
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -117,7 +117,7 @@
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -130,7 +130,7 @@
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-01.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -143,7 +143,7 @@
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-02.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -156,7 +156,7 @@
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/featured-03.jpg" alt="">
+                      <img src="assets/images/LOGO SV Lab.png" alt="">
                       <div class="hover-effect">
                         <h6>2.4K Streaming</h6>
                       </div>
@@ -178,7 +178,7 @@
                 <ul>
                   <li>
                     <span>01</span>
-                    <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> LahutaM</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -186,7 +186,7 @@
                   </li>
                   <li>
                     <span>02</span>
-                    <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> Kengan</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -194,7 +194,7 @@
                   </li>
                   <li>
                     <span>03</span>
-                    <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> Areluwa</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -202,7 +202,7 @@
                   </li>
                   <li>
                     <span>04</span>
-                    <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> Omeg</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -210,7 +210,7 @@
                   </li>
                   <li>
                     <span>05</span>
-                    <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
+                    <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; margin-right: 15px;">
                     <h6><i class="fa fa-check"></i> GangTeam</h6>
                     <div class="main-button">
                       <a href="#">Follow</a>
@@ -233,7 +233,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-05.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -248,7 +248,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Kengan Omeg</span>
                     <h4>Just Talking With Fans</h4>
@@ -258,7 +258,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-06.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -273,7 +273,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> LahutaMalc</span>
                     <h4>CS-GO 36 Hours Live Stream</h4>
@@ -283,7 +283,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-07.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -298,7 +298,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Areluwa</span>
                     <h4>Maybe Nathej Allnight Chillin'</h4>
@@ -308,7 +308,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-08.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -323,7 +323,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> NewGangTeam</span>
                     <h4>Live Streaming Till Morning</h4>
@@ -333,7 +333,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-07.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -348,7 +348,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-01.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Kengan Omeg</span>
                     <h4>Just Talking With Fans</h4>
@@ -358,7 +358,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-08.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -373,7 +373,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-02.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> LahutaMalc</span>
                     <h4>CS-GO 36 Hours Live Stream</h4>
@@ -383,7 +383,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-05.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -398,7 +398,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-03.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> Areluwa</span>
                     <h4>Maybe Nathej Allnight Chillin'</h4>
@@ -408,7 +408,7 @@
               <div class="col-lg-3 col-sm-6">
                 <div class="item">
                   <div class="thumb">
-                    <img src="assets/images/stream-06.jpg" alt="">
+                    <img src="assets/images/LOGO SV Lab.png" alt="">
                     <div class="hover-effect">
                       <div class="content">
                         <div class="live">
@@ -423,7 +423,7 @@
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="assets/images/avatar-04.jpg" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> NewGangTeam</span>
                     <h4>Live Streaming Till Morning</h4>
