--- a/browse.html
+++ b/browse.html
@@ -367,7 +367,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="down-content">
                     <div class="avatar">
-                      <img src="LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
+                      <img src="assets/images/LOGO SV Lab.png" alt="" style="max-width: 46px; border-radius: 50%; float: left;">
                     </div>
                     <span><i class="fa fa-check"></i> GangTm</span>
                     <h4>Live Streaming Till Morning</h4>
