--- a/index.html
+++ b/index.html
@@ -107,16 +107,20 @@
                   <h4><em>Nuestras </em> Empresas</h4>
                 </div>
                 <div class="row">
+
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/LOGO_inm.png" alt="">
-                      <h4>SV Inmobiliaria<br><span>Vivienda</span></h4>
-                      <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
-                      </ul>
+                      <a href="SV inmobiliaria/SV inmobiliaria.html">
+                        <img src="assets/images/LOGO_inm.png" alt="">
+                        <h4>SV Inmobiliaria<br><span>Vivienda</span></h4>
+                        <ul>
+                          <li><i class="fa fa-star"></i> 4.8</li>
+                          <li><i class="fa fa-download"></i> 2.3M</li>
+                        </ul>
+                      </a>
                     </div>
                   </div>
+                  
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/LOGO SV Lab_v.png" alt="">
@@ -141,7 +145,7 @@
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
                       <img src="assets/images/LOGO_cons.png" alt="">
-                      <h4>SV media<br><span>Comunicación</span></h4>
+                      <h4>SV Media<br><span>Comunicación</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
                         <li><i class="fa fa-download"></i> 2.3M</li>
