--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Nuestras </em> Empresas</h4>
+                  <h4><em>Nuestras </em> Dependencias</h4>
                 </div>
                 <div class="row">
 
@@ -114,8 +114,8 @@
                         <img src="assets/images/LOGO_inm.png" alt="">
                         <h4>SV Inmobiliaria<br><span>Vivienda</span></h4>
                         <ul>
-                          <li><i class="fa fa-star"></i> 4.8</li>
-                          <li><i class="fa fa-download"></i> 2.3M</li>
+                          <li><i class="fa fa-star"></i></li>
+                          <li><i class="fa fa-download"></i></li>
                         </ul>
                       </a>
                     </div>
@@ -126,8 +126,8 @@
                       <img src="assets/images/LOGO SV Lab_v.png" alt="">
                       <h4>SV Lab<br><span>Desarrollo de software</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
@@ -137,8 +137,18 @@
                       <h4>SV Construcciones<br>
                       <span>Obras Civiles</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/LOGO_store.png" alt="">
+                      <h4>SV Store<br><span>Importación/Exportación</span></h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
@@ -147,35 +157,9 @@
                       <img src="assets/images/LOGO_media.png" alt="">
                       <h4>SV Media<br><span>Comunicación</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="item">
-                      <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                          <div class="item inner-item">
-                            <img src="assets/images/LOGO_cons.png" alt="">
-                            <h4>SV Student<br><span>Educación</span></h4>
-                            <ul>
-                              <li><i class="fa fa-star"></i> 4.8</li>
-                              <li><i class="fa fa-download"></i> 2.3M</li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                          <div class="item">
-                            <img src="assets/images/LOGO_cons.png" alt="">
-                            <h4>SV Industries<br><span>Industria Mecánica</span></h4>
-                            <ul>
-                              <li><i class="fa fa-star"></i> 4.8</li>
-                              <li><i class="fa fa-download"></i> 2.3M</li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
@@ -183,8 +167,28 @@
                       <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Services<br><span>Transporte y logistica</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/LOGO_industries.png" alt="">
+                      <h4>SV Industries<br><span>Industria Mecánica</span></h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/FOX ACADEMY.png" alt="">
+                      <h4>FOX Academy<br><span>Educación</span></h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
@@ -193,8 +197,8 @@
                       <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Agro<br><span>Agricultura</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
@@ -203,8 +207,8 @@
                       <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Eat´s<br><span>Gastronomia</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
@@ -213,8 +217,8 @@
                       <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Health<br><span>Salud</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
@@ -223,8 +227,8 @@
                       <img src="assets/images/LOGO_cons.png" alt="">
                       <h4>SV Travel<br><span>Turismo</span></h4>
                       <ul>
-                        <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-star"></i></li>
+                        <li><i class="fa fa-download"></i></li>
                       </ul>
                     </div>
                   </div>
